--- a/styles.css
+++ b/styles.css
@@ -12,34 +12,47 @@ img {
   width: 100%;
 }
 
-#sidebar {
-  width: 30px;
+#nav {
+  width: 100%;
+  background-color: red;
+}
+
+.sidebar {
+  width: 100%;
   height: 100%;
-  background-color: black;
+  background-color: grey;
 }
 
 .cards {
   height: 300px;
   width: 200px;
-  margin-left: 5%;
-  margin-top: 20%;
-  padding: 5px;
+  margin: 4%;
+  /* padding: 15px; */
+}
+
+.a {
+  text-decoration: none;
 }
 
 .images {
   height: 200px;
   width: 255px;
-  padding: 5px;
 }
 
 .title {
   font-size: 10pt;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-top: 10px;
+  color: grey;
 }
 
 .name {
   font-size: 8pt;
+  color: grey;
 }
 
 .price {
   font-size: 5pt, bold;
+  color: grey;
 }
