--- a/styles.css
+++ b/styles.css
@@ -2,31 +2,52 @@
   box-sizing: border-box;
 }
 
-/* font from google fonts */
-
 body {
-  font-family: 'Montserrat', sans-serif;
+  font-family: Helvetica, sans-serif;
 }
 
 img {
   width: 100%;
 }
 
-#nav {
-  width: 100%;
-  background-color: red;
-}
+/* styling for sidebar - includes border and spacing */
 
 .sidebar {
+  text-decoration: none;
+  margin-top: 5%;
   width: 100%;
   height: 100%;
-  background-color: grey;
+  border: 1px solid grey;
+  border-radius: 5px;
+  padding: 5px;
 }
+
+/* drops the dots in front of list items */
+
+ul {
+  list-style-type: none;
+}
+
+/* changes links from blue to black */
+
+.categories>a {
+  color: black;
+}
+
+/* color for the show more link */
+
+.more {
+  color: orange;
+}
+
+/* sizing and margin for card items  */
 
 .cards {
   height: 300px;
   width: 200px;
-  margin: 4%;
+  margin-top: 4%;
+  margin-left: 4%;
+  margin-right: 4%;
   /* padding: 15px; */
 }
 
@@ -34,25 +55,32 @@ img {
   text-decoration: none;
 }
 
+/* sizing for pictures */
+
 .images {
-  height: 200px;
+  height: 235px;
   width: 255px;
 }
 
+/* sizing for title - keeps the text to one line */
+
 .title {
-  font-size: 10pt;
+  font-size: 12pt;
+  font-weight: lighter;
   white-space: nowrap;
   overflow: hidden;
   margin-top: 10px;
-  color: grey;
+  color: black;
 }
 
+/* sizing and colors for name of shop and price */
+
 .name {
-  font-size: 8pt;
+  font-size: 10pt;
   color: grey;
 }
 
 .price {
-  font-size: 5pt, bold;
-  color: grey;
+  font-size: 12pt;
+  color: black;
 }
