--- a/styles.css
+++ b/styles.css
@@ -16,10 +16,10 @@ img {
   text-decoration: none;
   margin-top: 5%;
   width: 100%;
-  height: 100%;
+  height: auto;
   border: 1px solid grey;
   border-radius: 5px;
-  padding: 5px;
+  padding: 10px;
 }
 
 /* drops the dots in front of list items */
@@ -40,15 +40,25 @@ ul {
   color: orange;
 }
 
+.section>h1 {
+  font-size: 12pt;
+  font-weight: bold;
+}
+
 /* sizing and margin for card items  */
 
 .cards {
   height: 300px;
-  width: 200px;
+  width: 260px;
   margin-top: 4%;
-  margin-left: 4%;
-  margin-right: 4%;
-  /* padding: 15px; */
+  margin-left: 1%;
+  margin-right: 1%;
+}
+
+/* adds a shadow behind the item cards when you hover over them */
+
+.cards:hover {
+  box-shadow: 4px 4px 4px 4px grey;
 }
 
 .a {
